# ForgeX

./: ourproject.md  package-lock.json
forgex/: .env.example  .gitignore  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
forgex/configs/: config.yaml
forgex/data/: users.json
forgex/docker/: Dockerfile.api  Dockerfile.frontend  docker-compose.yml
forgex/frontend/: dashboard.py  package-lock.json  package.json  pnpm-lock.yaml
forgex/frontend/public/: demo_script.md  index.html  styles.css
forgex/frontend/public/components/: WhatIfSimulator.jsx  auth.jsx
forgex/frontend/src/: babel.min.js  index.html
forgex/frontend/src/components/: WhatIfSimulator.jsx  app.jsx  icons.js
forgex/scripts/: seed_admin.py  seed_firebase.py
forgex/src/forgex/: __init__.py  __main__.py  config.py  errors.py  logging_setup.py  pipeline.py
forgex/src/forgex/api/: main.py  schemas.py
forgex/src/forgex/auth/: core.py  firebase_config.py  routes.py  schemas.py
forgex/src/forgex/explain/: __init__.py  narrative.py  shap_explainer.py
forgex/src/forgex/fairness/: __init__.py  audit.py
forgex/src/forgex/features/: __init__.py  nlp.py  pipeline.py
forgex/src/forgex/integrations/: __init__.py  webhooks.py
forgex/src/forgex/mlops/: __init__.py  champion.py  demo_fallback.py  drift.py  evaluation.py
forgex/src/forgex/models/: __init__.py  baseline.py  hazard.py  tft.py  uplift.py
forgex/src/forgex/optimize/: __init__.py  ilp_optimizer.py
forgex/src/forgex/reshape/: __init__.py  person_period.py
forgex/src/forgex/simulation/: __init__.py  bias_injection.py  entities.py  events.py  generator.py  hidden_state.py  market.py  utils.py  validation.py
forgex/tests/: conftest.py  test_api_schemas.py  test_drift.py  test_errors.py  test_fairness.py  test_models.py  test_nlp.py  test_reshape.py  test_simulation_utils.py
