[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forgex"
version = "1.0.0"
description = "Vital-signs monitoring for the landlord-tenant relationship"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.13.0,<2.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "lightgbm>=4.5.0,<5.0.0",
    "shap>=0.46.0,<1.0.0",
    "pulp>=2.9.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "faker>=28.0.0,<29.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "streamlit>=1.38.0,<2.0.0",
    "plotly>=5.24.0,<6.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",
    "orjson>=3.10.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "lifelines>=0.29.0,<1.0.0",
    "scikit-survival>=0.23.0,<1.0.0",
]

[project.optional-dependencies]
nlp = ["spacy>=3.7.0", "vaderSentiment>=3.3.0"]
fairness = ["fairlearn>=0.11.0"]
mlops = ["mlflow>=2.16.0"]
llm = ["anthropic>=0.34.0"]
tft = ["pytorch-lightning>=2.4.0", "pytorch-forecasting>=1.1.0"]
full = [
    "spacy>=3.7.0",
    "vaderSentiment>=3.3.0",
    "fairlearn>=0.11.0",
    "mlflow>=2.16.0",
    "anthropic>=0.34.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["forgex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests that need artifacts",
]

[tool.coverage.run]
source = ["src/forgex"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
